EDUPROV: 23-06-2021 Move blogs to Homepage

--- a/arts-humanities-course-information.html
+++ b/arts-humanities-course-information.html
@@ -16,7 +16,7 @@
   <meta name="author" content="thephotogenicbug">
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
   <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
+  <link rel="stylesheet" href="blog.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -91,7 +91,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/course/bachelor-in-mass-communication.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/bachelor-in-mass-communication.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20"> Bachelor of Mass Communication (BMC)</label>
@@ -107,7 +107,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/course/bachelor-of-physical-education.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/bachelor-of-physical-education.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Bachelor of Physical Education</label>
@@ -123,7 +123,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/course/bachelor-of-social-work.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/bachelor-of-social-work.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Bachelor of Social Work (BSW)</label>
@@ -140,7 +140,7 @@
 
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/course/bachelor-of-archaelogy.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/bachelor-of-archaelogy.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Bachelor’s degree in Archaeology</label>
@@ -156,7 +156,7 @@
         </div>
         <div class="col-md-4" id="callback">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/course/bachelor-of-arts.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/bachelor-of-arts.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Bachelor of Arts </label>
@@ -172,7 +172,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/course/bachelor-of-dance.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/bachelor-of-dance.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Bachelor of Arts in Dance or B.A</label>
@@ -204,7 +204,7 @@
   </div>
   <div class="col-md-4">
     <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-      <a href="https://eduprov.com/course/master-of-arts.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+      <a href="https://eduprov.com/master-of-arts.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
         style="background-color: rgb(255, 255, 255)" data-abc="true">
         <div class="content">
           <label class="title fz-20">Master of Arts (MA)</label>
@@ -321,22 +321,22 @@
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="https://eduprov.com/blogs/eduprov-mba-course-information.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/mba-course-information.html" style="text-decoration: none; color: white">
               <li>MBA</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-medical-course-information.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/medical-course-information.html" style="text-decoration: none; color: white">
               <li>MEDICAL</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-engineering-course-information.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/engineering-course-information.html" style="text-decoration: none; color: white">
               <li>ENGINEERING</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-law-course-information.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/law-course-information.html" style="text-decoration: none; color: white">
               <li>LAW</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-designing-course-information.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/designing-course-information.html" style="text-decoration: none; color: white">
               <li>DESIGNING</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-arts-humanities-course-information.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/arts-humanities-course-information.html" style="text-decoration: none; color: white">
               <li>ARTS</li>
             </a>
           </ul>
