--- a/commerce-course-information.html
+++ b/commerce-course-information.html
@@ -15,7 +15,7 @@
   <meta name="author" content="thephotogenicbug">
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
   <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
+  <link rel="stylesheet" href="blog.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -87,7 +87,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/course/bcom-professional-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/bcom-professional-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">B. Com (Professionals), Bachelor of Commerce Professionals</label>
@@ -105,7 +105,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/course/bcom-hons-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/bcom-hons-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">B.Com Honours (Hons)</label>
@@ -122,7 +122,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/course/bba-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/bba-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Bachelor of Business Administration</label>
@@ -140,7 +140,7 @@
 
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/course/bcom-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/bcom-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Bachelor of Commerce</label>
@@ -174,7 +174,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/course/mcom-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/mcom-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">M Com (Master of Commerce)</label>
