--- a/science-course-information.html
+++ b/science-course-information.html
@@ -17,7 +17,7 @@
   <meta name="author" content="thephotogenicbug">
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
   <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
+  <link rel="stylesheet" href="blog.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -94,7 +94,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/course/bsc-bioinformation-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/bsc-bioinformation-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20"> B. Sc Bioinformatics</label>
@@ -110,7 +110,7 @@
         </div>
         <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="https://eduprov.com/course/bsc-biotechnology-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+              <a href="https://eduprov.com/bsc-biotechnology-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
                 style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20">B. Sc Biotechnology  </label>
@@ -126,7 +126,7 @@
           </div>
           <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="https://eduprov.com/course/bsc-chemistry-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+              <a href="https://eduprov.com/bsc-chemistry-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
                 style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20">B. Sc Chemistry </label>
@@ -143,7 +143,7 @@
 
           <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="https://eduprov.com/course/btech-in-dairy-technology.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+              <a href="https://eduprov.com/btech-in-dairy-technology.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
                 style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20">B. Sc Dairy Technology </label>
@@ -159,7 +159,7 @@
           </div>
           <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="https://eduprov.com/course/bsc-food-processing-and-technology-course.html.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+              <a href="https://eduprov.com/bsc-food-processing-and-technology-course.html.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
                 style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20">B. Sc Food Processing and Technology </label>
@@ -175,7 +175,7 @@
           </div>
           <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="https://eduprov.com/course/bsc-forensic-science-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+              <a href="https://eduprov.com/bsc-forensic-science-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
                 style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20"> B. Sc Forensic Science</label>
@@ -191,7 +191,7 @@
           </div>
           <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="https://eduprov.com/course/bsc-forestry-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+              <a href="https://eduprov.com/bsc-forestry-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
                 style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20">B. Sc Forestry  </label>
@@ -207,7 +207,7 @@
           </div>
           <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="https://eduprov.com/course/bsc-horticulture-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+              <a href="https://eduprov.com/bsc-horticulture-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
                 style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20">B. Sc Horticulture </label>
@@ -223,7 +223,7 @@
           </div>
           <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="https://eduprov.com/course/bsc-mathematics-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+              <a href="https://eduprov.com/bsc-mathematics-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
                 style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20"> B. Sc Mathematics</label>
@@ -239,7 +239,7 @@
           </div>
           <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="https://eduprov.com/course/bsc-zoology-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+              <a href="https://eduprov.com/bsc-zoology-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
                 style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20">B. Sc Zoology </label>
@@ -255,7 +255,7 @@
           </div>
           <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="https://eduprov.com/course/bsc-agriculture-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+              <a href="https://eduprov.com/bsc-agriculture-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
                 style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20"> B. Sc. Agriculture</label>
@@ -271,7 +271,7 @@
           </div>
           <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="https://eduprov.com/course/bsc-in-biology.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+              <a href="https://eduprov.com/bsc-in-biology.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
                 style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20">B. Sc. Biology </label>
@@ -287,7 +287,7 @@
           </div>
           <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="https://eduprov.com/course/bsc-in-botany.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+              <a href="https://eduprov.com/bsc-in-botany.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
                 style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20">B.Sc Botany | Bachelor of Science (Botany )  </label>
@@ -303,7 +303,7 @@
           </div>
           <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="https://eduprov.com/course/bsc-in-physics.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+              <a href="https://eduprov.com/bsc-in-physics.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
                 style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20"> B.Sc Physics</label>
@@ -320,7 +320,7 @@
           </div>
           <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="https://eduprov.com/course/bsc-in-pure-science.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+              <a href="https://eduprov.com/bsc-in-pure-science.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
                 style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20">B.Sc Pure Science</label>
@@ -336,7 +336,7 @@
           </div>
           <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="https://eduprov.com/course/bsc-in-food-science.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+              <a href="https://eduprov.com/bsc-in-food-science.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
                 style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20">B.Sc. Food Science </label>
@@ -352,7 +352,7 @@
           </div>
           <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="https://eduprov.com/course/bsc.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+              <a href="https://eduprov.com/bsc.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
                 style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20"> Bachelor of Science</label>
@@ -368,7 +368,7 @@
           </div>
           <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="https://eduprov.com/course/bsc-in-microbiology.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+              <a href="https://eduprov.com/bsc-in-microbiology.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
                 style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20">Bachelor Of Science In Microbiology (B. Sc Microbiology ) </label>
@@ -385,7 +385,7 @@
      
           <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="https://eduprov.com/course/bsc-statistics.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+              <a href="https://eduprov.com/bsc-statistics.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
                 style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20">Bachelor of Science in Statistics (B.Sc. Statistics) </label>
@@ -401,7 +401,8 @@
           </div>
           <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="https://eduprov.com/course/bsc-photography.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+              <a href="https://eduprov.com/bsc-photography.html" 
+                style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
                 style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20">B.Sc in Photography after 12th </label>
@@ -432,7 +433,7 @@
   </div>
   <div class="col-md-4">
     <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-      <a href="https://eduprov.com/course/master-of-science.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+      <a href="https://eduprov.com/master-of-science.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
         style="background-color: rgb(255, 255, 255)" data-abc="true">
         <div class="content">
           <label class="title fz-20">Master of Science (MS)</label>
@@ -548,22 +549,22 @@
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="https://eduprov.com/blogs/eduprov-mba-course-information.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/mba-course-information.html" style="text-decoration: none; color: white">
               <li>MBA</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-medical-course-information.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/medical-course-information.html" style="text-decoration: none; color: white">
               <li>MEDICAL</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-engineering-course-information.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/engineering-course-information.html" style="text-decoration: none; color: white">
               <li>ENGINEERING</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-law-course-information.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/law-course-information.html" style="text-decoration: none; color: white">
               <li>LAW</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-designing-course-information.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/designing-course-information.html" style="text-decoration: none; color: white">
               <li>DESIGNING</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-arts-humanities-course-information.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/arts-humanities-course-information.html" style="text-decoration: none; color: white">
               <li>ARTS</li>
             </a>
           </ul>
