EDUPROV: 23-06-2021 Update links

--- a/alliance-university.html
+++ b/alliance-university.html
@@ -31,7 +31,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
         <link rel="apple-touch-icon" href="/images/favicon.png">
-        <link rel="stylesheet" href="../blog.css" />
+        <link rel="stylesheet" href="blog.css" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -300,22 +300,22 @@
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="https://eduprov.com/blogs/eduprov-mba-course-information.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/mba-course-information.html" style="text-decoration: none; color: white">
               <li>MBA</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-medical-course-information.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/medical-course-information.html" style="text-decoration: none; color: white">
               <li>MEDICAL</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-engineering-course-information.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/engineering-course-information.html" style="text-decoration: none; color: white">
               <li>ENGINEERING</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-law-course-information.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/law-course-information.html" style="text-decoration: none; color: white">
               <li>LAW</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-designing-course-information.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/designing-course-information.html" style="text-decoration: none; color: white">
               <li>DESIGNING</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-arts-humanities-course-information.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/arts-humanities-course-information.html" style="text-decoration: none; color: white">
               <li>ARTS</li>
             </a>
           </ul>
