--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               class="fa fa-user"></i> Student Form</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-university"></i> Admission</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-users"></i> Counselling</a>
-          <a href="https://eduprov.com/blogs/eduprov-exams-dates-information.html"
+          <a href="https://eduprov.com/exams-dates-information.html"
             class="nav-item text-white nav-link active"><i class="fa fa-book"></i> Exams</a>
         </div>
 
@@ -191,7 +191,7 @@
               <div class="card">
                 <div class="card-body">
                   <i class="fa fa-book"></i>
-                  <a href="https://eduprov.com/blogs/eduprov-courses-list.html" style="text-decoration: none;">
+                  <a href="https://eduprov.com/courses-list.html" style="text-decoration: none;">
                     <h5 class="card-title text-dark"> Course Information</h5>
                   </a>
                   <p class="card-text" id="card-font">information on courses and eligibility with career scope is
@@ -522,27 +522,27 @@
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="https://eduprov.com/blogs/eduprov-mba-course-information.html"
+            <a href="https://eduprov.com/mba-course-information.html"
               style="text-decoration: none; color: white">
               <li>MBA</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-medical-course-information.html"
+            <a href="https://eduprov.com/bmedical-course-information.html"
               style="text-decoration: none; color: white">
               <li>MEDICAL</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-engineering-course-information.html"
+            <a href="https://eduprov.com/engineering-course-information.html"
               style="text-decoration: none; color: white">
               <li>ENGINEERING</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-law-course-information.html"
+            <a href="https://eduprov.com/law-course-information.html"
               style="text-decoration: none; color: white">
               <li>LAW</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-designing-course-information.html"
+            <a href="https://eduprov.com/designing-course-information.html"
               style="text-decoration: none; color: white">
               <li>DESIGNING</li>
             </a>
-            <a href="https://eduprov.com/blogs/eduprov-arts-humanities-course-information.html"
+            <a href="https://eduprov.com/arts-humanities-course-information.html"
               style="text-decoration: none; color: white">
               <li>ARTS</li>
             </a>
