EDUPROV: 26-06-2021 : Redesign Content user interface 2/2

--- a/engineering-course-information.html
+++ b/engineering-course-information.html
@@ -466,7 +466,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/btech-mechanical.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/btech-mechanical-engineering-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">B.Tech Mechanical Engineering</label>
