--- a/btech-mechanical-engineering-course.html
+++ b/btech-mechanical-engineering-course.html
@@ -56,11 +56,12 @@
   <link rel="apple-touch-icon" href="/images/favicon.png">
   <link rel="stylesheet" href="blog.css" />
   <link rel="stylesheet" href="accordian.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
 </head>
 
@@ -73,18 +74,15 @@
       <div class="line"></div>
     </div>
     <ul class="nav-links">
-      <li class="text-white"><a href="#">Home</a></li>
-      <li><a href="#">Application Form</a></li>
+      <li class="text-white"><a href="https://eduprov.com/">Home</a></li>
+      <li><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
       <li><a href="#">Admission Guidance</a></li>
-   
     </ul>
   </nav>
 <div class="logo">
      <img src="images/logo-white.png" alt="Edu-logo" />
 </div>
   <!--Nav Bar End-->
-
- 
 
   <div class="banner" style=" 
       background-color: #d31815;
@@ -187,7 +185,7 @@
       </div>
       <hr/>
       <div class="row ">
-        <div class="col-md-5 ">
+        <div class="col-md-6 ">
           <div class="card m-2" id="card-left">
               <table class="table table-sm text-center" id="paragraph-font">
                 <tr>
@@ -206,11 +204,79 @@
                   <td>Physics I</td>
                   <td>Mechanics of Solids</td>
                 </tr>
+                <tr>
+                  <td>Engineering Materials</td>
+                  <td>Theory of Machines</td>
+                </tr>
+                <tr>
+                  <td>Chemistry</td>
+                  <td>Mathematics III</td>
+                </tr>
+                <tr>
+                  <td>Engineering Graphics</td>
+                  <td>Mechanics of Solids Practical </td>
+                </tr>
+                <tr>
+                  <td>Environmental Studies</td>
+                  <td>Theory of Machines Practical</td>
+                </tr>
+                <tr>
+                  <td>Value Education</td>
+                  <td>Applied Thermodynamics Practical</td>
+                </tr>
+                <tr>
+                  <td>Workshop Practice I</td>
+                  <td>Dynamics of Machinery</td>
+                </tr>
+                <tr>
+                  <td>Chemistry Practical</td>
+                  <td>Mechanical Engineering Design</td>
+                </tr>
+                <tr>
+                  <td>Physics Practical I</td>
+                  <td>Fluid Mechanics</td>
+                </tr>
+                <tr>
+                  <td>Mathematics II</td>
+                  <td>Numerical and Statistical Methods</td>
+                </tr>
+                <tr>
+                  <td>Programming Languages</td>
+                  <td>Electrical Machines and Control</td>
+                </tr>
+                <tr>
+                  <td>Physics II</td>
+                  <td>Numerical and Statistical Methods</td>
+                </tr>
+                <tr>
+                  <td>Introduction to Information Tech</td>
+                  <td>Fluid Mechanics Practical</td>
+                </tr>
+                <tr>
+                  <td>Engineering Mechanics</td>
+                  <td>Numerical and Statistical Methods Practical</td>
+                </tr>
+                <tr>
+                  <td>Electrical Technology</td>
+                  <td>Dynamics of Machinery Practical</td>
+                </tr>
+                <tr>
+                  <td>Electronics and Instrumentation</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>Electronics & Instrumentation Practical</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>HR Environment</td>
+                  <td></td>
+                </tr>
                 </table>
            
           </div>
         </div>
-        <div class="col-md-7 ">
+        <div class="col-md-6 ">
           <div class="card m-2" id="card-left">
             <table class="table table-sm text-center" id="paragraph-font">
               <tr>
@@ -228,6 +294,90 @@
               <tr>
                 <td>Heat and Mass Transfer</td>
                 <td>Energy Conversion Equipment</td>
+              </tr>
+              <tr>
+                <td>Fluid Machines</td>
+                <td>Industrial Tribology </td>
+              </tr>
+              <tr>
+                <td>Industrial Engineering and management</td>
+                <td>Refrigeration and Air Conditioning</td>
+              </tr>
+              <tr>
+                <td>Fluid Machines Practical</td>
+                <td>Mechatronics</td>
+              </tr>
+              <tr>
+                <td>Heat and Mass Transfer Practical</td>
+                <td>Utilization of Non-Conventional Energy</td>
+              </tr>
+              <tr>
+                <td>Computer-Aided Design</td>
+                <td>Waste Heat Utilization</td>
+              </tr>
+              <tr>
+                <td>Internal Combustion Engines</td>
+                <td>Fracture Mechanics</td>
+              </tr>
+              <tr>
+                <td>Mechanical Vibration</td>
+                <td>Advanced Manufacturing Systems</td>
+              </tr>
+              <tr>
+                <td>Advanced Solid Mechanics</td>
+                <td>Measurements and Instrumentation Practical</td>
+              </tr>
+              <tr>
+                <td>Internal Combustion Engines Practical Production Technology I</td>
+                <td>Energy Conversion Equipment</td>
+              </tr>
+              <tr>
+                <td>Mechanical Vibration Practical</td>
+                <td>Computer-Aided Manufacturing</td>
+              </tr>
+              <tr>
+                <td>Workshop Practice</td>
+                <td>Mechanical Handling Equipment</td>
+              </tr>
+              <tr>
+                <td></td>
+                <td>Advanced Fluid Mechanics</td>
+              </tr>
+              <tr>
+                <td></td>
+                <td>Automobile Engineering</td>
+              </tr>
+              <tr>
+                <td></td>
+                <td>Ergonomics</td>
+              </tr>
+              <tr>
+                <td></td>
+                <td>Finite Element Analysis</td>
+              </tr>
+              <tr>
+                <td></td>
+                <td>Maintenance Engineering</td>
+              </tr>
+              <tr>
+                <td></td>
+                <td>Composite Materials</td>
+              </tr>
+              <tr>
+                <td></td>
+                <td>Automation and Robotics</td>
+              </tr>
+              <tr>
+                <td></td>
+                <td>Hydraulic and Pneumatic System</td>
+              </tr>
+              <tr>
+                <td></td>
+                <td>Power Plant Engineering</td>
+              </tr>
+              <tr>
+                <td></td>
+                <td>Environmental Engineering</td>
               </tr>
               </table>
          
@@ -360,6 +510,7 @@
            </div>    
         </div>
    </div>
+   <div></div>
   <hr />
 
   <div class="container-fluid justify-content-center px-0">
@@ -377,7 +528,7 @@
                     class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
               </span>
               <span>
-                <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
+                <a href="https://www.instagram.com/eduprov_education/" #id="footer-url" class="text-white"> <i
                     class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
               </span>
               <span>
