Eduprov : 29-06-2021 : Redesign KCET Exam Content user interface and Add Keywords

--- a/btech-mechanical-engineering-course.html
+++ b/btech-mechanical-engineering-course.html
@@ -9,8 +9,7 @@
   <meta property="og:title" content="B.Tech Mechanical Engineering Admission Guidance - Eduprov" />
   <meta property="og:url" content="https://eduprov.com/btech-mechanical-engineering-course.html" />
   <meta property="og:site_name" content="Eduprov" />
-  <meta property="og:description"
-    content="B.Tech Mechanical Engineering is a 4 year undergraduate engineering course which specifies or gives a brief study on production." />
+  <meta property="og:description" content="B.Tech Mechanical Engineering is a 4 year undergraduate engineering course which specifies or gives a brief study on production." />
   <meta property="og:image" content="https://i.ibb.co/QY9s41N/B-Tech-mech.jpg" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@eduprov" />
@@ -76,12 +75,12 @@
       <div class="line"></div>
     </div>
     <ul class="nav-links">
-      <li class="text-white"><a href="https://eduprov.com/">Home</a></li>
-      <li><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
-      <li><a href="#">Admission Guidance</a></li>
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"> <a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Admission Guidance</a></li>
     </ul>
   </nav>
-<div class="logo">
+<div id="logo">
      <img src="images/logo-white.png" alt="Edu-logo" />
 </div>
   <!--Nav Bar End-->
