--- a/courses-list.html
+++ b/courses-list.html
@@ -29,12 +29,12 @@
       <div class="line"></div>
     </div>
     <ul class="nav-links">
-      <li class="text-white"><a href="https://eduprov.com/">Home</a></li>
-      <li><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
-      <li><a href="#">Admission Guidance</a></li>
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Admission Guidance</a></li>
     </ul>
   </nav>
-<div class="logo">
+<div id="logo">
      <img src="images/logo-white.png" alt="Edu-logo" />
 </div>
   <!--Nav Bar End-->
