--- a/exams-dates-information.html
+++ b/exams-dates-information.html
@@ -91,13 +91,13 @@
       <div class="row">
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/kcet-exam.html" style="text-decoration: none;" class="icon-box text-center"
+            <a href="https://eduprov.com/kcet-exam-information.html" style="text-decoration: none;" class="icon-box text-center"
               data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">KCET EXAM</label>
                 <div class="desc">
                   <p>
-                   
+                   KCET by the KEA authority, this exam admits students into undergraduate courses in Bachelor of Engineering, Bachelor of Technology, Bachelor of Veterinary Science and Animal Husbandry (B.VSc & AH), B Pharma, D Pharma, BSc Agriculture, Sericulture, Horticulture and Forestry, Paramedical Courses, Naturopathy and Yoga Courses in Government Colleges, Private Colleges , Universities, aided and unaided educational institutions of Karnataka.
                   </p>
                 </div>
                 <span class="link">Read More <i class="fa fa-arrow-right"></i></span>
