Eduprov : 02-07-2021 Update userinterface add  missing viewport and Fix B.Tech Mechanical Engineering Title and Content

--- a/kcet-exam-information.html
+++ b/kcet-exam-information.html
@@ -44,7 +44,7 @@
         }
       },
       "datePublished": "2021-06-29",
-      "dateModified": "2021-06-29"
+      "dateModified": "2021-07-2"
     }
     </script>
   <meta name="description" content="KCET by the KEA authority, this exam admits students into undergraduate courses in Bachelor of Engineering, Bachelor of Technology, Bachelor of Veterinary Science and Animal Husbandry (B.VSc & AH), B Pharma, D Pharma, BSc Agriculture, Sericultur.">
@@ -75,22 +75,23 @@
     <ul class="nav-links">
       <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
       <li style="font-weight: bold;"><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
-      <li style="font-weight: bold;"><a href="#">Admission Guidance</a></li>
     </ul>
   </nav>
-<div id="logo">
-     <img src="images/logo-white.png" alt="Edu-logo" />
-</div>
-      <!--Nav Bar End-->
-      <div class="banner"alt="Background-color">
-        <div class="container text-white">
-          <div class="row">
-            <div class="col-md-8 mt-5 pt-5">
-              <h1 class="text-white">KCET Exam </h1>
-            </div>
-          </div>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
+  </div>
+
+
+  <div class="banner">
+
+    <div class="container text-white">
+      <div class="row">
+        <div class="col-md-8 mt-5 pt-5">
+          <h1 class="text-white">KCET Exam</h1>
         </div>
       </div>
+    </div>
+  </div>
 
       <div class="container mt-2">
         <div class="row">
