--- a/btech-mechanical-engineering-course.html
+++ b/btech-mechanical-engineering-course.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="canonical" href="https://eduprov.com/btech-mechanical-engineering-course.html" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="B.Tech Mechanical Engineering Admission Guidance - Eduprov" />
@@ -19,7 +20,7 @@
   <meta name="twitter:image" content="https://i.ibb.co/QY9s41N/B-Tech-mech.jpg" />
   <meta name="twitter:url" content="https://twitter.com/eduprov" />
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov-Logo" />
-  <title>B.Tech Mechanical Engineering Admission Guidance - Eduprov</title>
+  <title>B.Tech Mechanical Engineering Admission in Bangalore - Eduprov</title>
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -28,8 +29,8 @@
         "@type": "WebPage",
         "@id": "https://eduprov.com/btech-mechanical-engineering-course.html"
       },
-      "headline": "B.Tech Mechanical Engineering Admission Guidance - Eduprov",
-      "description": "B.Tech Mechanical Engineering is a 4 year undergraduate engineering course which specifies or gives a brief study on production.",
+      "headline": "B.Tech Mechanical Engineering Admission Eligibility - Eduprov",
+      "description": "B.Tech Mechanical Engineering is one amongst the most preferred courses in the engineering streamlet.",
       "image": "https://i.ibb.co/QY9s41N/B-Tech-mech.jpg",  
       "author": {
         "@type": "Person",
@@ -44,25 +45,45 @@
         }
       },
       "datePublished": "2021-06-26",
-      "dateModified": "2021-06-28"
+      "dateModified": "2021-07-2"
     }
     </script>
-  <meta name="description" content="B.Tech Mechanical Engineering is a 4 year undergraduate engineering course which specifies or gives a brief study on production. ">
+  <meta name="description" content="B.Tech Mechanical Engineering is one amongst the most preferred courses in the engineering streamlet Get B.Tech Mechanical Engineering Admission in Bangalore at Eduprov">
   <meta name="keywords" content="mechanical engineering,mechanical,b tech courses,be btech,b tech full from,b tech mechanical engineering,b tech engineering,b tech courses list,b tech biotechnology,b tech college,be mechanical engineering,btech college,basic mechanical engineering,be mechanical,b tech course duration,b tech eligibility,after btech,btech duration,after btech courses,b tech chemical engineering,best college for btech,mechanical designs,admission in btech,be btech admission 2020,b tech in,btech is,b tech engineering courses,mechanical designer,mechanical engineering technician,machine engineering,mekanikal engineering,mtech mechanical,mech engineering,mechanical and electrical engineering,mechanical electrical,be b tech,b tech agricultural engineering,after mechanical engineering,mechanical cad,mechanical engineering degrees,courses after btech,b tech computer engineering,b tech aeronautical engineering,b tech aerospace engineering,be and btech,btech after diploma,top 10 private engineering colleges in uptu,best companies for mechanical engineers,pursuing btech,best iit for mechanical engineering,auto mechanical engineering,b tech biotechnology colleges,b tech mechanical,best university for mechanical engineering,b tech civil,b tech automobile engineering,automotive mechanical engineering,mechanical electrical engineering,direct admission in btech,advanced mechanical engineering,best course in btech,btech computer science and engineering,be mech,btech mechanical engineering subjects,mechanical core companies,about b tech course,mechanical engineering polytechnic,b tech electrical,chartered mechanical engineer,colleges for btech,trainee mechanical engineer,psu for mechanical,computer science and engineering b tech courses,vit b tech admission 2020,vit b tech admission,btech is graduation,b tech diploma,upes btech,b tech genetic engineering,b tech engineering college,specialization in btech,short term courses after btech,computer science and engineering b tech courses list,new courses in btech,cad mechanical engineering,be b tech courses,after btech cse,be and btech are same,pg courses after btech,btech after 12th,b tech computer science engineering,mechanical engineering consultancy,mechanical engineering websites,courses after btech cse,b tech course year,vit mechanical engineering,b tech in electronics and communication engineering,private engineering college,institute of mechanical engineers india,b tech m tech,mechanical technical,best private engineering college,best courses after btech,best private college for btech,about btech,b tech best course,online btech courses,private colleges for btech,courses after btech ece,top private engineering college,mechanical polytechnic,top private engineering colleges in uptu,vit b tech courses,best mechanical engineer,institute of mechanical engineering,best uptu college for computer science engineering,b tech details,computer science and engineering b tech,btech mechanical subjects,top btech colleges,b tech graduation,manipal btech admission,after btech civil engineering,distance btech after diploma,courses after btech mechanical,b tech in electronics,btech aeronautical,b tech and m tech,admission for btech 2020,all btech courses,jee main b tech,after btech in mechanical engineering,b tech me,b tech evening colleges,top private college for btech,jain university btech,best university for btech,btech time duration,integrated btech,b tech chemical,top 10 btech colleges,best course after btech cse,direct admission in btech colleges,top 10 private engineering college,b tech in electrical and electronics engineering,b tech aerospace,b tech colleges in greater noida,b tech biotechnology course,btech 1st year physics,b tech mechanical course,mechanical engineering university,mechanical and aerospace engineering,university mechanical,mechanical engineering news,mechanical systems engineering,mcmaster mechanical engineering,professional mechanical engineer,mechanical and manufacturing engineering,aero mechanical engineering,mechanical and industrial engineering,a mechanical engineer,mechanical e,uts mechanical engineering,mechanical power engineering,mechanical tech,civil and mechanical engineering,nimeche,mechanical aerospace engineering,mechanical site engineer,mechanical and production engineering,best states for mechanical engineers,general mechanical engineering,uvm mechanical engineering,mechanical commissioning engineer,mechanical engineering tech,marine mechanical engineering,mechanical engineering cit,utp mechanical engineering,aerospace mechanical engineer,aerospace and mechanical engineering,btec mechanical engineering,studying mechanical engineering,mechanical and mechatronics engineering,aeronautical mechanical engineering,after btech ece,mechanical automotive,mechanical process engineer,computer mechanical engineering,motor mechanical engineering,btech 2nd year,aircraft mechanical engineer,mechanical engineering consultancy services,b tech near me,mechanical commissioning,upsee best colleges for btech,mechanical engineering b tech courses list,it in btech,short term courses after btech cse,after btech mechanical,b tech computer science and engineering course details,good colleges for btech,b tech course eligibility,b tech mechanical engineering fees,b tech and engineering is same,b eng tech,top courses in btech,b tech chemical engineering colleges,online courses for btech students,marine engineering after btech,b tech course time,jims btech,ipu affiliated colleges for btech,b tech mechanical subjects,best colleges in ipu for btech,b tech integrated course,mechanical engineering b tech courses,diploma courses after btech,btech admission on 12th marks,admission b tech 2020,specialization in cse btech,btech college admission 2020,top 10 ipu colleges for btech in cse,colleges under aktu for btech,aerospace engineering b tech courses,b tech in electronics and telecommunication engineering,master degree after btech,diploma to btech,btech new courses,b tech fisheries engineering,b tech in electronics and telecommunication,b tech in mechanical engineering correspondence course,courses after btech civil,b tech after 10th,private engineering,b tech in panjab university,b tech it eligibility,diploma in btech,after btech mechanical which course is better,top btech courses,computer science and engineering iit,courses to do after btech,pg courses after btech cse,alliance university btech,b tech biotechnology course duration,specialization in btech cse,b tech me subjects,btech education,btech is engineering,best du colleges for btech,admission in b tech 2020,b tech in mechatronics engineering,direct second year b tech admission,b tech genetic engineering colleges,b tech course duration after diploma,b tech colleges in,subjects in mechanical engineering btech,b tech anna university,best college for btech biotechnology,b tech aircraft maintenance engineering,be and btech courses,graduation btech,b tech automotive engineering,best courses after btech ece,b tech in nuclear engineering,after b tech civil engineering courses,b tech duration after diploma,new btech courses,all btech courses list,b tech college admission 2020,b tech colleges in chhattisgarh,studies after btech,courses under b tech,btech with cs,computer science and engineering colleges,iti after btech,b tech in chemical engineering colleges,courses for btech students,best courses after btech mechanical,computer science engineering in iit,courses in cse btech,after btech civil,btech comes under,after iti can i do btech,best btech colleges near me,b tech it colleges,btech christ university,btech after iti,manipal btech courses,upes btech courses,manipal university for btech,btech after 12,courses after btech eee,b tech in instrumentation and control engineering,courses for mechanical engineers after btech,best courses for ece students after btech,btech 2020,b tech food engineering,b tech in agricultural and food engineering,different btech courses,b tech biochemical engineering,btech 5 years,college b tech,mba after btech mechanical,b tech biotechnology engineering,upsc after btech cse,computer science engineering iit,different courses in btech,online b tech mechanical engineering,distance learning btech after diploma,b tech in renewable energy,graduation in btech,agricultural engineering after 12th,entrance for b tech,btech after diploma in computer engineering,after b tech computer science engineering,b tech in mechanical engineering after diploma,b tech mechanical engineering requirements,after btech mechanical engineering courses,b tech in mechanical engineering from ignou,mca after btech mechanical,mtech in cse after btech in mechanical,b tech mechanical admission 2020,b tech mechanical subjects list,total subjects in b tech mechanical engineering,b tech mechanical engineering eligibility,b tech mechanical engineering all subjects,mechanical engineering btech subjects,b tech courses after diploma in mechanical engineering,mechanical subjects in btech,b tech mechanical engineering lateral entry,best courses after b tech mechanical engineering,btech in mechanical engineering subjects,mechanical engineering courses after btech,b eng tech in mechanical engineering,b tech mechanical engineering course,b tech mechanical engineering duration,short term courses after btech mechanical,pg courses after btech mechanical,b tech degree in mechanical engineering,btech is a graduation,mechanical btech subjects,
 
   ">
-  <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="B.Tech Mechanical Engineering Admission Eligibility - Eduprov" />
+  <meta property="og:url" content="https://eduprov.com/btech-mechanical-engineering-course.html" />
+  <meta property="og:site_name" content="Eduprov" />
+  <meta property="og:description"
+    content="B.Tech Mechanical Engineering is one amongst the most preferred courses in the engineering streamlet." />
+  <meta property="og:image" content="https://i.ibb.co/QY9s41N/B-Tech-mech.jpg" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="B.Tech Mechanical Engineering Admission Eligibility - Eduprov" />
+  <meta name="twitter:description"
+    content="B.Tech Mechanical Engineering is one amongst the most preferred courses in the engineering streamlet." />
+  <meta name="twitter:image" content="https://i.ibb.co/QY9s41N/B-Tech-mech.jpg" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
   <link rel="apple-touch-icon" href="/images/favicon.png">
+  <meta name="author" content="thephotogenicbug">
   <link rel="stylesheet" href="blog.css" />
   <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
+  </script>
 
 </head>
 
@@ -76,16 +97,15 @@
     </div>
     <ul class="nav-links">
       <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
-      <li style="font-weight: bold;"> <a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
-      <li style="font-weight: bold;"><a href="#">Admission Guidance</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
     </ul>
   </nav>
-<div id="logo">
-     <img src="images/logo-white.png" alt="Edu-logo" />
-</div>
-  <!--Nav Bar End-->
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
+  </div>
 
-  <div class="banner"alt="Background-color">
+
+  <div class="banner">
 
     <div class="container text-white">
       <div class="row">
@@ -104,7 +124,7 @@
 
         <div class="col-md-12">
           <p class="text-justify m-2 text-dark mt-4" id="paragraph-font">
-            <b>B.Tech Mechanical Engineering</b> is one amongst the most preferred courses in the engineering streamlet. As we all know that engineering has various streams and a lot of courses which are high on demand and has opened a lot of gateways into the best career for students. 
+            <b>B.Tech Mechanical Engineering</b> is one amongst the most preferred courses in the engineering streamlet. As we all know that engineering has various streams and a lot of courses that are high on demand and has opened a lot of gateways into the best career for students <b>Get B.Tech Mechanical Engineering Admission in Bangalore at Eduprov</b>. 
           </p>
           <p class="text-justify m-2 text-dark" id="paragraph-font">
            B.Tech Mechanical Engineering is a 4 year <b>undergraduate engineering course</b>  which specifies or gives a brief study on production, designing and operation of machines. Students who are more interested and have a liking towards applications of machines, their functions and different principles can opt for this course as it also gives the student a top end source over the best career options. 
