Eduprov : 03-07-2021 : B.Tech Aeronautical Engineering New Content

--- a/engineering-course-information.html
+++ b/engineering-course-information.html
@@ -452,7 +452,7 @@
      
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/btech-in-aeronautical.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/btech-aeronautical-engineering-admission.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">B.Tech Aeronautical Engineering</label>
@@ -501,13 +501,13 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/btech-mechanical-engineering-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/btech-mechanical-engineering-admission.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">B.Tech Mechanical Engineering</label>
                 <div class="desc">
                   <p>
-                    pending meta title and keyword
+                    B.Tech Mechanical Engineering is one amongst the most preferred courses Get B.Tech Mechanical Engineering Admission in Bangalore at Eduprov
                   </p>
                 </div>
                 <span class="link">Read More <i class="fa fa-arrow-right"></i></span>
