--- a/kcet-exam-information.html
+++ b/kcet-exam-information.html
@@ -82,22 +82,16 @@
   </div>
 
 
-  <div class="banner">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1 class="text-white">KCET Exam</h1>
-        </div>
+  <div class="container text-white">
+    <div class="row">
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-black">KCET Exam </h1>
       </div>
     </div>
   </div>
-
-      <div class="container mt-2">
+      <div class="container mt-3">
         <div class="row">
-          <div class="col-md-12 text-center">
-            <h2 id="tag-font">Introduction to KCET Exam </h2>
-          </div>
+          
            <div class="col-md-12">
              <p class="text-justify m-2 text-dark mt-4" id="paragraph-font">
                 Each course has its own level of challenges. But all the most challenging courses needs its students to crack their entrance exams. There are different kinds of entrance exams. Amongst them one such important and annually happening is KCET (Karnataka Common Entrance Test). CET also called as Karnataka Common Entrance Test entirely was introduced for the students of Karnataka only in the year 1984. The CET is conducted every year by the Karnataka Examination Authority (KEA). Every year around 1 million students take up this exam.
