Eduprov : 05-07-2021 : Rebrand links

--- a/mba-course-blogs.html
+++ b/mba-course-blogs.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="canonical" href="https://eduprov.com/mba-course-information.html" />
+  <link rel="canonical" href="https://eduprov.com/mba-course-blogs.html" />
   <title>MBA Course Admission Guidance in Bangalore - Eduprov</title>
   <script type="application/ld+json">
     {
@@ -13,7 +13,7 @@
       "@type": "BlogPosting",
       "mainEntityOfPage": {
         "@type": "WebPage",
-        "@id": "https://eduprov.com/mba-course-information.html"
+        "@id": "https://eduprov.com/mba-course-blogs.html"
       },
       "headline": "MBA Course Admission Guidance in Bangalore - Eduprov",
       "description": "MBA is an internationally accredited post-graduate degree for developing business and management skills amongst future business leaders and entrepreneurs.",
@@ -39,7 +39,7 @@
 " />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="MBA Course Admission Guidance in Bangalore - Eduprov" />
-<meta property="og:url" content="https://eduprov.com/mba-course-information.html" />
+<meta property="og:url" content="https://eduprov.com/mba-course-blogs.html" />
 <meta property="og:site_name" content="Eduprov" />
 <meta property="og:description"
   content="MBA is an internationally accredited post-graduate degree for developing business and management skills amongst future business leaders and entrepreneurs." />
