--- a/btech-in-production.html
+++ b/btech-in-production.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
     <link rel="apple-touch-icon" href="/images/favicon.png">
-    <link rel="stylesheet" href="../blog.css" />
+    <link rel="stylesheet" href="blog.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
