Eduprov : 09-07-2021 : Add NEET and JEE MAIN

--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
             <a href="https://eduprov.com/jee-exam-blog.html" id="links">
               <li>JEE</li>
             </a>
-            <a href="https://eduprov.com/neet-exam.html" id="links">
+            <a href="https://eduprov.com/neet-exam-blog.html" id="links">
               <li>NEET</li>
             </a>
           </ul>
