--- a/exams-blogs.html
+++ b/exams-blogs.html
@@ -77,7 +77,7 @@
                 <label class="title fz-20">KCET EXAM</label>
                 <div class="desc">
                   <p>
-                   KCET by the KEA authority, this exam admits students into undergraduate courses in Bachelor of Engineering, Bachelor of Technology, Bachelor of Veterinary Science and Animal Husbandry (B.VSc & AH), B Pharma, D Pharma, BSc Agriculture, Sericulture, Horticulture and Forestry, Paramedical Courses, Naturopathy and Yoga Courses in Government Colleges, Private Colleges , Universities, aided and unaided educational institutions of Karnataka.
+                   KCET by the KEA authority, this exam admits students into undergraduate courses in Bachelor of Engineering, Bachelor of Technology, Bachelor of Veterinary Science and Animal Husbandry (B.VSc & AH), B Pharma, D Pharma, .
                   </p>
                 </div>
                 <span class="link">Read More <i class="fa fa-arrow-right"></i></span>
@@ -87,13 +87,29 @@
         </div>
         <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="https://eduprov.com/neet-exam.html" style="text-decoration: none;" class="icon-box text-center"
+              <a href="https://eduprov.com/neet-exam-blog.html" style="text-decoration: none;" class="icon-box text-center"
                 data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20">NEET EXAM</label>
                   <div class="desc">
                     <p>
-                     
+                      NEET also called as National Eligibility cum Entrance Test is an all India pre medical entrance test for students who are willing to pursue any sort of Medical, Dental, Veterinary course and AYUSH courses pertaining to Ayurveda and siddha medicine.
+                    </p>
+                  </div>
+                  <span class="link">Read More <i class="fa fa-arrow-right"></i></span>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
+              <a href="https://eduprov.com/jee-exam-blog.html" style="text-decoration: none;" class="icon-box text-center"
+                data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
+                <div class="content">
+                  <label class="title fz-20">JEE MAIN</label>
+                  <div class="desc">
+                    <p>
+                      JEE also called as Joint Entrance Examination is an engineering assessment test which is conducted for admissions in various engineering courses in top engineering colleges of India. JEE Mains is a part of two different examinations
                     </p>
                   </div>
                   <span class="link">Read More <i class="fa fa-arrow-right"></i></span>
@@ -112,25 +128,29 @@
       <div class="row justify-content-around mb-0 pt-5 mx-4">
         <div class="col-xl-2 col-md-4 order-xl-1 order-4 mr-xl-0 my-auto">
           <ul class="list-unstyled mt-md-3 mt-5">
-            <label style="font-weight: bold">Social Media</label>
+            <label id="footer-bold-label">Social Media</label>
             <li class="social">
-                <span>
-                   <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span></a>
-                <span>
-                   <a href="https://twitter.com/eduprov" #id="footer-url"class="text-white"> <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
-                </span>
-                <span>
-                   <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
-                </span>
-                <span>
-                  <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" #id="footer-url" class="text-white"> <i class="fa fa-linkedin m-2 fa-1x" aria-hidden="true"></i></a>
-               </span>
+              <span>
+                <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i
+                    class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span></a>
+              <span>
+                <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
+                    class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
+              </span>
+              <span>
+                <a href="https://www.instagram.com/eduprov_education/" #id="footer-url" class="text-white"> <i
+                    class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
+              </span>
+              <span>
+                <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" #id="footer-url"
+                  class="text-white"> <i class="fa fa-linkedin m-2 fa-1x" aria-hidden="true"></i></a>
+              </span>
             </li>
-        </ul>
+          </ul>
           <ul class="list-unstyled mt-md-3 mt-5">
-            <label style="font-weight: bold">Address</label>
+            <label id="footer-bold-label">Address</label>
             <p>
-            No 20 2nd Floor<br />
+               No 20 2nd Floor<br />
               Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
               560001
             </p>
@@ -140,15 +160,15 @@
             </p>
           </ul>
           <ul class="list-unstyled my-xl-4 my-md-3">
-            <label class="mt-md-0 mt-4" style="font-weight: bold">Copyright</label>
-            <a href="https://github.com/thephotogenicbug" style="text-decoration: none; color: white">
+            <label class="mt-md-0 mt-4" id="footer-bold-label">Copyright</label>
+            <a href="https://github.com/thephotogenicbug" id="links">
               <li>&#9400; thephotogenicbug</li>
             </a>
           </ul>
         </div>
         <div class="col-xl-2 col-md-3 pt-4 order-1">
           <ul class="list-unstyled">
-            <label class="mt-md-0 mt-4" style="font-weight: bold">USA Location</label>
+            <label class="mt-md-0 mt-4" id="footer-bold-label">USA Location</label>
             <p>
               N.E Blaine Minnesota USA 55434<br />
               (+1) 651 967 7789
@@ -156,76 +176,67 @@
           </ul>
         </div>
 
-        <div class="col-xl-2 col-md-3 pt-4 order-2">
+       <!-- <div class="col-xl-2 col-md-3 pt-4 order-2">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Study Abroad</label>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="#" class="links">
               <li>USA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="#" class="links">
               <li>UK</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="#" class="links">
               <li>AUSTRALIA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="#" class="links">
               <li>CANADA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="#"class="links">
               <li>GERMANY</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href=""class="links">
               <li>ARMENIA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="#"class="links">
               <li></li>
             </a>
           </ul>
-        </div>
+        </div>-->
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Exams</label>
-            <a href="" style="text-decoration: none; color: white">
-              <li>CET</li>
+            <a href="https://eduprov.com/kcet-exam-information.html" id="links">
+              <li>KCET</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>IIT-JEE</li>
+            <a href="https://eduprov.com/jee-exam-blog.html" id="links">
+              <li>JEE</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>GATE</li>
-            </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>AIPMT</li>
-            </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>CAT</li>
-            </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>MAT</li>
+            <a href="https://eduprov.com/neet-exam.html" id="links">
+              <li>NEET</li>
             </a>
           </ul>
         </div>
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="https://eduprov.com/mba-course-blogs.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/mba-course-blogs.html" id="links">
               <li>MBA</li>
             </a>
-            <a href="https://eduprov.com/medical-course-blogs.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/medical-course-blogs.html" id="links">
               <li>MEDICAL</li>
             </a>
             <a href="https://eduprov.com/engineering-course-blogs.html"
-              style="text-decoration: none; color: white">
+            id="links">
               <li>ENGINEERING</li>
             </a>
-            <a href="https://eduprov.com/law-course-blogs.html" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/law-course-blogs.html" id="links">
               <li>LAW</li>
             </a>
-            <a href="hhttps://eduprov.com/designing-course-blogs.html" style="text-decoration: none; color: white">
-              <li>DESIGNING</li>
+            <a href="https://eduprov.com/designing-course-blogs.html"  id="links">
+              <li >DESIGNING</li>
             </a>
             <a href="https://eduprov.com/arts-course-blogs.html"
-              style="text-decoration: none; color: white">
+            id="links">
               <li>ARTS</li>
             </a>
           </ul>
@@ -233,7 +244,6 @@
       </div>
     </footer>
   </div>
-  <!--Footer End-->
 </body>
 <script src="app.js"></script>
 </html>
