Eduprov : Create new footer and add schema org

--- a/btech-aeronautical-engineering-admission.html
+++ b/btech-aeronautical-engineering-admission.html
@@ -6,6 +6,34 @@
   <link rel="canonical" href="https://eduprov.com/btech-aeronautical-engineering-admission.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>B.Tech Aeronautical Engineering Admission in Bangalore - Eduprov</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/btech-aeronautical-engineering-admission.html"
+      },
+      "headline": "B.Tech Aeronautical Engineering Admission in Bangalore - Eduprov",
+      "description": "B.Tech Aeronautical Engineering is a professional course in the engineering streamlet which deals with the principles of an aircraft Get B.Tech Aeronautical Engineering Admission in Bangalore at Eduprov.",
+      "image": "https://i.ibb.co/YbdGcMP/aeronotical-eng.jpg",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-07-13",
+      "dateModified": "2021-07-13"
+    }
+    </script>
+
   <meta name="description" content="B.Tech Aeronautical Engineering is a professional course in the engineering streamlet which deals with the principles of an aircraft Get B.Tech Aeronautical Engineering Admission in Bangalore at Eduprov.">
   <meta name="keywords" content=" b tech aeronautical engineering, b tech aerospace engineering, aeronautical engineering entrance exam, entrance exam for aeronautical engineering after 12th, entrance exam for aerospace engineering after 12th, institute of aeronautical engineering course admissions, aerospace engineering entrance exam, btech aeronautical, b tech aerospace, b tech in aviation, aeronautical engineering admission, aeronautical engineering admission 2020, aeronautical engineering entrance exam 2020, b tech aeronautical engineering colleges, list of entrance exams for aeronautical engineering, aerospace engineering b tech courses, aeronautical engineering eligibility criteria, entrance for aeronautical engineering, aeronautical engineering admission eligibility, best colleges for b tech aeronautical engineering, aeronautical engineering entrance exam dates, national institute of aeronautical engineering course admissions, aerospace engineering admission, aeronautical engineering admission process, college of aeronautical engineering eligibility criteria, b tech aeronautical engineering subjects, b tech courses in aeronautical engineering, eligibility criteria for aeronautical engineering, aerospace engineering eligibility criteria, aerospace engineering b tech courses list, b tech aerospace engineering colleges, aeronautical engineering 1st year subjects, aeronautical engineering entrance exam 2021, b tech in aerospace engineering colleges, after b tech aeronautical engineering, aeronautical engineering admission criteria, b tech aerospace engineering subjects, subjects in b tech aerospace engineering, eligibility for aeronautical engineering after 12th, aeronautics entrance exam, aeronautical engineering lateral entry, b tech aeronautical engineering admission,
   
@@ -15,14 +43,14 @@
   <meta property="og:url" content="https://eduprov.com/btech-aeronautical-engineering-admission.html" />
   <meta property="og:site_name" content="Eduprov" />
   <meta property="og:description"
-    content="" />
-  <meta property="og:image" content="https://i.ibb.co/QY9s41N/B-Tech-mech.jpg" />
+    content="B.Tech Aeronautical Engineering is a professional course in the engineering streamlet which deals with the principles of an aircraft Get B.Tech Aeronautical Engineering Admission in Bangalore at Eduprov." />
+  <meta property="og:image" content="https://i.ibb.co/YbdGcMP/aeronotical-eng.jpg" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@eduprov" />
-  <meta name="twitter:title" content="" />
+  <meta name="twitter:title" content="B.Tech Aeronautical Engineering Admission in Bangalore - Eduprov" />
   <meta name="twitter:description"
-    content="" />
-  <meta name="twitter:image" content="https://i.ibb.co/QY9s41N/B-Tech-mech.jpg" />
+    content="B.Tech Aeronautical Engineering is a professional course in the engineering streamlet which deals with the principles of an aircraft Get B.Tech Aeronautical Engineering Admission in Bangalore at Eduprov." />
+  <meta name="twitter:image" content="https://i.ibb.co/YbdGcMP/aeronotical-eng.jpg" />
   <meta name="twitter:url" content="https://twitter.com/eduprov" />
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
   <link rel="apple-touch-icon" href="/images/favicon.png">
