--- a/index.html
+++ b/index.html
@@ -60,18 +60,13 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
-  </script>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-94021714-1"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -224,8 +219,7 @@
         <div>
           <label class="blog-label-heading">Engineering Course</label>
           <p class="text-justify " style="color: #BD6B73 !important;">Engineering is a stream of education that involves
-            the application of Science, Technology and Mathematics to innovate, design, develop and maintain machines,
-            structures, software, hardware and systems & processes.</p>
+            the application of Science, Technology and Mathematics to innovate, design, develop and maintain machines,</p>
           <a href="https://eduprov.com/engineering-course-blogs.html" class="btn text-white"
             style="background: #BD6B73;">
             Click Here For Engineering Blogs
@@ -283,7 +277,7 @@
         <div>
           <label class="blog-label-heading">Commerce Course</label>
           <p class="text-justify " style="color: #BD6B73 !important;"> Commerce is a field which students who have an
-            interest in the field of financial information/transactions, trading of economic value, etc.</p>
+            interest in the field of financial information/transactions, </p>
           <a href="https://eduprov.com/commerce-course-blogs.html" class="btn btn text-white"
             style="background: #BD6B73;">
             Click Here For Commerce Blogs
@@ -313,8 +307,7 @@
         </div>
         <div>
           <label class="blog-label-heading">Education Course</label>
-          <p class="text-justify " style="color: #BD6B73 !important;">Education is the study of the process of receiving
-            and giving systematic instruction.</p>
+          <p class="text-justify " style="color: #BD6B73 !important;">Education is a broad field of study that covers teaching, training and tutoring techniques dedicated to future professionals.</p>
           <a href="https://eduprov.com/education-course-blogs.html" class="btn btn text-white"
             style="background: #BD6B73;">
             Click Here For Education Blogs
@@ -360,8 +353,7 @@
         <div>
           <label class="blog-label-heading">Technical Course</label>
           <p class="text-justify " style="color: #BD6B73 !important;">Technical course means a unit of learning which
-            yields skills, knowledge, and appreciation essential to the specific occupation for which the program was
-            designed.</p>
+            yields skills, knowledge, and appreciation essential to the specific occupation.</p>
           <a href="https://eduprov.com/technical-course-blogs.html" class="btn btn text-white"
             style="background: #BD6B73;">
             Click Here For Technical Blogs
@@ -599,127 +591,145 @@
 
 
 
-  <div class="container-fluid justify-content-center px-0">
-    <footer>
-      <div class="row justify-content-around mb-0 pt-5 mx-4">
-        <div class="col-xl-2 col-md-4 order-xl-1 order-4 mr-xl-0 my-auto">
-          <ul class="list-unstyled mt-md-3 mt-5">
-            <label id="footer-bold-label">Social Media</label>
-            <li class="social">
-              <span>
-                <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i
-                    class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span></a>
-              <span>
-                <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
-                    class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
-              </span>
-              <span>
-                <a href="https://www.instagram.com/eduprov_education/" #id="footer-url" class="text-white"> <i
-                    class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
-              </span>
-              <span>
-                <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" #id="footer-url"
-                  class="text-white"> <i class="fa fa-linkedin m-2 fa-1x" aria-hidden="true"></i></a>
-              </span>
-            </li>
-          </ul>
-          <ul class="list-unstyled mt-md-3 mt-5">
-            <label id="footer-bold-label">Address</label>
-            <p>
-               No 20 2nd Floor<br />
-              Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
-              560001
-            </p>
-            <p>
-              Contact:<br />
-              +91 80 25591146
-            </p>
-          </ul>
-          <ul class="list-unstyled my-xl-4 my-md-3">
-            <label class="mt-md-0 mt-4" id="footer-bold-label">Copyright</label>
-            <a href="https://github.com/thephotogenicbug" id="links">
-              <li>&#9400; thephotogenicbug</li>
-            </a>
-          </ul>
-        </div>
-        <div class="col-xl-2 col-md-3 pt-4 order-1">
-          <ul class="list-unstyled">
-            <label class="mt-md-0 mt-4" id="footer-bold-label">USA Location</label>
-            <p>
-              N.E Blaine Minnesota USA 55434<br />
-              (+1) 651 967 7789
-            </p>
-          </ul>
-        </div>
+  <footer class="page-footer font-small bg-dark pt-4">
 
-       <!-- <div class="col-xl-2 col-md-3 pt-4 order-2">
-          <ul class="list-unstyled">
-            <label class="mt-md-0 mt-4" style="font-weight: bold">Study Abroad</label>
-            <a href="#" class="links">
-              <li>USA</li>
-            </a>
-            <a href="#" class="links">
-              <li>UK</li>
-            </a>
-            <a href="#" class="links">
-              <li>AUSTRALIA</li>
-            </a>
-            <a href="#" class="links">
-              <li>CANADA</li>
-            </a>
-            <a href="#"class="links">
-              <li>GERMANY</li>
-            </a>
-            <a href=""class="links">
-              <li>ARMENIA</li>
-            </a>
-            <a href="#"class="links">
-              <li></li>
-            </a>
-          </ul>
-        </div>-->
-        <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
-          <ul class="list-unstyled">
-            <label class="mt-md-0 mt-4" style="font-weight: bold">Top Exams</label>
-            <a href="https://eduprov.com/kcet-exam-information.html" id="links">
-              <li>KCET</li>
-            </a>
-            <a href="https://eduprov.com/jee-exam-blog.html" id="links">
-              <li>JEE</li>
-            </a>
-            <a href="https://eduprov.com/neet-exam-blog.html" id="links">
-              <li>NEET</li>
-            </a>
-          </ul>
+    <!-- Footer Links -->
+    <div class="container text-center text-md-left">
+  
+      <!-- Footer links -->
+      <div class="row text-center text-md-left mt-3 pb-3">
+  
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold text-white">Eduprov Education Institute</h6>
+          <p>Best Admission Guidance in Bangalore Eduprov is an esteemed name in Career Counseling, Overseas Education & Admission Guidance institute located in the heart of Bengaluru. </p>
         </div>
-        <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
-          <ul class="list-unstyled">
-            <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="https://eduprov.com/mba-course-blogs.html" id="links">
-              <li>MBA</li>
-            </a>
-            <a href="https://eduprov.com/medical-course-blogs.html" id="links">
-              <li>MEDICAL</li>
-            </a>
-            <a href="https://eduprov.com/engineering-course-blogs.html"
-            id="links">
-              <li>ENGINEERING</li>
-            </a>
-            <a href="https://eduprov.com/law-course-blogs.html" id="links">
-              <li>LAW</li>
-            </a>
-            <a href="https://eduprov.com/designing-course-blogs.html"  id="links">
-              <li >DESIGNING</li>
-            </a>
-            <a href="https://eduprov.com/arts-course-blogs.html"
-            id="links">
-              <li>ARTS</li>
-            </a>
-          </ul>
+        <!-- Grid column -->
+  
+        <hr class="w-100 clearfix d-md-none">
+  
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold text-white">Products</h6>
+          <p>
+            <a id="links" href="https://eduprov.com/mba-course-blogs.html">MBA</a>
+          </p>
+          <p>
+            <a id="links" href="https://eduprov.com/medical-course-blogs.html">MEDICAL</a>
+          </p>
+          <p>
+            <a id="links" href="https://eduprov.com/engineering-course-blogs.html">ENGINEERING</a>
+          </p>
+          <p>
+            <a id="links" href="https://eduprov.com/law-course-blogs.html">LAW</a>
+          </p>
+          <p>
+            <a id="links" href="https://eduprov.com/designing-course-blogs.html">DESIGNING</a>
+          </p>
+          <p>
+            <a id="links" href="https://eduprov.com/arts-course-blogs.html">ARTS</a>
+          </p>
         </div>
+        <!-- Grid column -->
+  
+        <hr class="w-100 clearfix d-md-none">
+  
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold text-white">Top Exams</h6>
+          <p>
+            <a id="links" href="https://eduprov.com/kcet-exam-information.html">KCET</a>
+          </p>
+          <p>
+            <a id="links" href="https://eduprov.com/jee-exam-blog.html">JEE</a>
+          </p>
+          <p>
+            <a id="links" href="https://eduprov.com/neet-exam.html">NEET</a>
+          </p>
+         
+        </div>
+  
+        <!-- Grid column -->
+        <hr class="w-100 clearfix d-md-none">
+  
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold text-white">Contact</h6>
+          <p>
+            <i class="fas fa-map-pin mr-3"></i> No 20 2nd Floor Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka 560001</p>
+          <p>
+            <p>
+              <i class="fas fa-map-pin mr-3"></i> N.E Blaine Minnesota USA 55434</p>
+            <p>
+            <i class="fas fa-envelope mr-3"></i> admin@eduprov.com</p>
+          <p>
+            <i class="fas fa-phone mr-3"></i> +91 80 25591146</p>
+          <p>
+            <i class="fas fa-phone mr-3"></i> (+1) 651 967 7789 USA</p>
+        </div>
+        <!-- Grid column -->
+  
       </div>
-    </footer>
-  </div>
+      <!-- Footer links -->
+  
+      <hr>
+  
+      <!-- Grid row -->
+      <div class="row d-flex align-items-center">
+  
+        <!-- Grid column -->
+        <div class="col-md-7 col-lg-8">
+  
+          <!--Copyright-->
+          <p class="text-center text-md-left">© 2021 Copyright:
+            <a href="https://github.com/thephotogenicbug/">
+              <strong>thephotogenicbug</strong>
+            </a>
+          </p>
+  
+        </div>
+        <!-- Grid column -->
+  
+        <!-- Grid column -->
+        <div class="col-md-5 col-lg-4 ml-lg-0">
+  
+          <!-- Social buttons -->
+          <div class="text-center text-md-right">
+            <ul class="list-unstyled list-inline">
+              <li class="list-inline-item">
+                <a href="https://www.facebook.com/eduprovinstitute/" class="btn btn-primary btn-rounded btn-sm rgba-white-slight mx-1">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://twitter.com/eduprov" class="btn btn-info btn-rounded btn-sm rgba-white-slight mx-1">
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" class="btn btn-secondary btn-rounded btn-sm rgba-white-slight mx-1">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.instagram.com/eduprov_education/" class="btn btn-danger btn-rounded btn-sm rgba-white-slight mx-1">
+                  <i class="fab fa-instagram"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+  
+        </div>
+        <!-- Grid column -->
+  
+      </div>
+      <!-- Grid row -->
+  
+    </div>
+    <!-- Footer Links -->
+  
+  </footer>
+  <!-- Footer -->
   <!--Start of Tawk.to Script-->
 <script type="text/javascript">
   var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
