Eduprov : 13-07-2021 Add New Footer

--- a/acs-college-of-engineering.html
+++ b/acs-college-of-engineering.html
@@ -197,7 +197,7 @@
 
       <!-- Grid column -->
       <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-        <h6 class="text-uppercase mb-4 font-weight-bold text-white">Products</h6>
+        <h6 class="text-uppercase mb-4 font-weight-bold text-white">Course Links</h6>
         <p>
           <a id="links" href="https://eduprov.com/mba-course-blogs.html">MBA</a>
         </p>
