--- a/bachelor-of-physical-education.html
+++ b/bachelor-of-physical-education.html
@@ -175,137 +175,147 @@
   </div>
   </div>
 
-  <div class="container-fluid justify-content-center px-0">
-    <footer>
-      <div class="row justify-content-around mb-0 pt-5 mx-4">
-        <div class="col-xl-2 col-md-4 order-xl-1 order-4 mr-xl-0 my-auto">
-          <ul class="list-unstyled mt-md-3 mt-5">
-            <label style="font-weight: bold">Social Media</label>
-            <li class="social">
-              <span>
-                <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i
-                    class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span></a>
-              <span>
-                <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
-                    class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
-              </span>
-              <span>
-                <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
-                    class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
-              </span>
-              <span>
-                <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" #id="footer-url"
-                  class="text-white"> <i class="fa fa-linkedin m-2 fa-1x" aria-hidden="true"></i></a>
-              </span>
-            </li>
-          </ul>
-          <ul class="list-unstyled mt-md-3 mt-5">
-            <label style="font-weight: bold">Address</label>
-            <p>
-              No 20 2nd Floor<br />
-              Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
-              560001
-            </p>
-            <p>
-              Contact:<br />
-              +91 80 25591146
-            </p>
-          </ul>
-          <ul class="list-unstyled my-xl-4 my-md-3">
-            <label class="mt-md-0 mt-4" style="font-weight: bold">Copyright</label>
-            <a href="https://github.com/thephotogenicbug" style="text-decoration: none; color: white">
-              <li>&#9400; thephotogenicbug</li>
-            </a>
-          </ul>
-        </div>
-        <div class="col-xl-2 col-md-3 pt-4 order-1">
-          <ul class="list-unstyled">
-            <label class="mt-md-0 mt-4" style="font-weight: bold">USA Location</label>
-            <p>
-              N.E Blaine Minnesota USA 55434<br />
-              (+1) 651 967 7789
-            </p>
-          </ul>
-        </div>
+  
+  <footer class="page-footer font-small bg-dark pt-4">
 
-        <div class="col-xl-2 col-md-3 pt-4 order-2">
-          <ul class="list-unstyled">
-            <label class="mt-md-0 mt-4" style="font-weight: bold">Study Abroad</label>
-            <a href="" style="text-decoration: none; color: white">
-              <li>USA</li>
-            </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>UK</li>
-            </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>AUSTRALIA</li>
-            </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>CANADA</li>
-            </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>GERMANY</li>
-            </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>ARMENIA</li>
-            </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li></li>
-            </a>
-          </ul>
+    <!-- Footer Links -->
+    <div class="container text-center text-md-left">
+  
+      <!-- Footer links -->
+      <div class="row text-center text-md-left mt-3 pb-3">
+  
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold text-white">Eduprov Education Institute</h6>
+          <p>Best Admission Guidance in Bangalore Eduprov is an esteemed name in Career Counseling, Overseas Education & Admission Guidance institute located in the heart of Bengaluru. </p>
         </div>
-        <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
-          <ul class="list-unstyled">
-            <label class="mt-md-0 mt-4" style="font-weight: bold">Top Exams</label>
-            <a href="" style="text-decoration: none; color: white">
-              <li>CET</li>
-            </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>IIT-JEE</li>
-            </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>GATE</li>
-            </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>AIPMT</li>
-            </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>CAT</li>
-            </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>MAT</li>
-            </a>
-          </ul>
+        <!-- Grid column -->
+  
+        <hr class="w-100 clearfix d-md-none">
+  
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold text-white">Course Links</h6>
+          <p>
+            <a id="links" href="https://eduprov.com/mba-course-blogs.html">MBA</a>
+          </p>
+          <p>
+            <a id="links" href="https://eduprov.com/medical-course-blogs.html">MEDICAL</a>
+          </p>
+          <p>
+            <a id="links" href="https://eduprov.com/engineering-course-blogs.html">ENGINEERING</a>
+          </p>
+          <p>
+            <a id="links" href="https://eduprov.com/law-course-blogs.html">LAW</a>
+          </p>
+          <p>
+            <a id="links" href="https://eduprov.com/designing-course-blogs.html">DESIGNING</a>
+          </p>
+          <p>
+            <a id="links" href="https://eduprov.com/arts-course-blogs.html">ARTS</a>
+          </p>
         </div>
-        <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
-          <ul class="list-unstyled">
-            <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="https://eduprov.com/mba-course-blogs.html" style="text-decoration: none; color: white">
-              <li>MBA</li>
-            </a>
-            <a href="https://eduprov.com/medical-course-blogs.html" style="text-decoration: none; color: white">
-              <li>MEDICAL</li>
-            </a>
-            <a href="https://eduprov.com/engineering-course-blogs.html"
-              style="text-decoration: none; color: white">
-              <li>ENGINEERING</li>
-            </a>
-            <a href="https://eduprov.com/law-course-blogs.html" style="text-decoration: none; color: white">
-              <li>LAW</li>
-            </a>
-            <a href="hhttps://eduprov.com/designing-course-blogs.html" style="text-decoration: none; color: white">
-              <li>DESIGNING</li>
-            </a>
-            <a href="https://eduprov.com/arts-course-blogs.html"
-              style="text-decoration: none; color: white">
-              <li>ARTS</li>
-            </a>
-          </ul>
+        <!-- Grid column -->
+  
+        <hr class="w-100 clearfix d-md-none">
+  
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold text-white">Top Exams</h6>
+          <p>
+            <a id="links" href="https://eduprov.com/kcet-exam-information.html">KCET</a>
+          </p>
+          <p>
+            <a id="links" href="https://eduprov.com/jee-exam-blog.html">JEE</a>
+          </p>
+          <p>
+            <a id="links" href="https://eduprov.com/neet-exam.html">NEET</a>
+          </p>
+         
         </div>
+  
+        <!-- Grid column -->
+        <hr class="w-100 clearfix d-md-none">
+  
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold text-white">Contact</h6>
+          <p>
+            <i class="fas fa-map-pin mr-3"></i> No 20 2nd Floor Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka 560001</p>
+          <p>
+            <p>
+              <i class="fas fa-map-pin mr-3"></i> N.E Blaine Minnesota USA 55434</p>
+            <p>
+            <i class="fas fa-envelope mr-3"></i> admin@eduprov.com</p>
+          <p>
+            <i class="fas fa-phone mr-3"></i> +91 80 25591146</p>
+          <p>
+            <i class="fas fa-phone mr-3"></i> (+1) 651 967 7789 USA</p>
+        </div>
+        <!-- Grid column -->
+  
       </div>
-    </footer>
-  </div>
+      <!-- Footer links -->
+  
+      <hr>
+  
+      <!-- Grid row -->
+      <div class="row d-flex align-items-center">
+  
+        <!-- Grid column -->
+        <div class="col-md-7 col-lg-8">
+  
+          <!--Copyright-->
+          <p class="text-center text-md-left">© 2021 Copyright:
+            <a href="https://github.com/thephotogenicbug/">
+              <strong>thephotogenicbug</strong>
+            </a>
+          </p>
+  
+        </div>
+        <!-- Grid column -->
+  
+        <!-- Grid column -->
+        <div class="col-md-5 col-lg-4 ml-lg-0">
+  
+          <!-- Social buttons -->
+          <div class="text-center text-md-right">
+            <ul class="list-unstyled list-inline">
+              <li class="list-inline-item">
+                <a href="https://www.facebook.com/eduprovinstitute/" class="btn btn-primary btn-rounded btn-sm rgba-white-slight mx-1">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://twitter.com/eduprov" class="btn btn-info btn-rounded btn-sm rgba-white-slight mx-1">
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" class="btn btn-secondary btn-rounded btn-sm rgba-white-slight mx-1">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.instagram.com/eduprov_education/" class="btn btn-danger btn-rounded btn-sm rgba-white-slight mx-1">
+                  <i class="fab fa-instagram"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+  
+        </div>
+        <!-- Grid column -->
+  
+      </div>
+      <!-- Grid row -->
+  
+    </div>
+    <!-- Footer Links -->
+  
+  </footer>
+  <!-- Footer -->
   <!--Footer End-->
 </body>
-
+<script src="app.js"></script>
 </html>
