Eduprov : 14-07-2021 : Add Whtsapp button and new Address in footer

--- a/anthony-boys-school.html
+++ b/anthony-boys-school.html
@@ -116,7 +116,7 @@
         <!-- Grid column -->
         <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
           <h6 class="text-uppercase mb-4 font-weight-bold text-white">Eduprov Education Institute</h6>
-          <p>Best Admission Guidance in Bangalore Eduprov is an esteemed name in Career Counseling, Overseas Education & Admission Guidance institute located in the heart of Bengaluru. </p>
+          <p class="text-white">Best Admission Guidance in Bangalore Eduprov is an esteemed name in Career Counseling, Overseas Education & Admission Guidance institute located in the heart of Bengaluru. </p>
         </div>
         <!-- Grid column -->
   
@@ -169,17 +169,18 @@
         <!-- Grid column -->
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
           <h6 class="text-uppercase mb-4 font-weight-bold text-white">Contact</h6>
-          <p>
-            <i class="fas fa-map-pin mr-3"></i> No 20 2nd Floor Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka 560001</p>
-          <p>
-            <p>
-              <i class="fas fa-map-pin mr-3"></i> N.E Blaine Minnesota USA 55434</p>
-            <p>
-            <i class="fas fa-envelope mr-3"></i> admin@eduprov.com</p>
-          <p>
-            <i class="fas fa-phone mr-3"></i> +91 80 25591146</p>
-          <p>
-            <i class="fas fa-phone mr-3"></i> (+1) 651 967 7789 USA</p>
+          <p class="text-white">
+            <i class="fas fa-map-pin mr-3 text-white"></i> No 20 2nd Floor Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka 560001</p>
+          <p class="text-white">
+              <i class="fas fa-map-pin mr-3 text-white"></i> N.E Blaine Minnesota USA 55434</p>
+              <p class="text-white">
+                <i class="fas fa-map-pin mr-3 text-white"></i> Old Whittlesey Road Suite Columbus Georgia 31909</p>
+            <p class="text-white">
+            <i class="fas fa-envelope mr-3 text-white"></i> admin@eduprov.com</p>
+          <p class="text-white">
+            <i class="fas fa-phone mr-3 text-white"></i> +91 80 25591146</p>
+          <p class="text-white">
+            <i class="fas fa-phone mr-3 text-white"></i> (+1) 651 967 7789 USA</p>
         </div>
         <!-- Grid column -->
   
@@ -243,8 +244,6 @@
     <!-- Footer Links -->
   
   </footer>
-  <!-- Footer -->
-  <!--Footer End-->
 </body>
 <script src="app.js"></script>
 </html>
