Remove whatsapp icon

--- a/index.html
+++ b/index.html
@@ -532,9 +532,9 @@
   </section>
 
 
-  <a  href="https://api.whatsapp.com/send?phone=add-ur-number-here-without-plus-symbol-and-space" class="float" target="_blank" >
-    <i class="fab fa-whatsapp my-float" ></i>
-    </a>
+  <a  href="https:
+
+
      
 
   <section class="section-services">
