Eduprov : 16-07-2021 Add New Title Schema org Add new Keywords

--- a/acs-college-of-engineering.html
+++ b/acs-college-of-engineering.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="canonical" href="https://eduprov.com/acs-college-of-engineering.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,9 +39,9 @@
 
     ">
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="ACS College of Engineering Admission in Bangalore<" />
+    <meta property="og:title" content="ACS College of Engineering Admission in Bangalore" />
     <meta property="og:url" content="https://eduprov.com/acs-college-of-engineering.html" />
-    <meta property="og:site_name" content="Eduprov" />
+    <meta property="og:site_name" content="Eduprov Educational Institute" />
     <meta property="og:description"
       content="ACS College of Engineering, an institution of academic excellence was established in the year 2009 with a cherished desire to serve the cause of humanity through education." />
     <meta property="og:image" content="#" />
@@ -52,8 +52,8 @@
       content="ACS College of Engineering, an institution of academic excellence was established in the year 2009 with a cherished desire to serve the cause of humanity through education." />
     <meta name="twitter:image" content="#" />
     <meta name="twitter:url" content="https://twitter.com/eduprov" />
-    <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-    <link rel="apple-touch-icon" href="/images/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+    <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
     <meta name="author" content="thephotogenicbug">
     <link rel="stylesheet" href="blog.css" />
     <link rel="stylesheet" href="accordian.css" />
